publicPage/css/product-page-style.css
:root {
    --params-width: 55%;
    --thumbnail-width: calc(100% - 2% - var(--params-width));
}

.ppi-upload-parameters {
    margin-bottom: 2px;
    display: flex;
    justify-content: space-between;
}

.ppi-upload-parameters .thumbnail-container {
    width: var(--thumbnail-width);
    background-color: whitesmoke;
    background-repeat: no-repeat;
    background-size: contain;
    background-position: center;
}

.ppi-upload-parameters table {
    margin-bottom: 0;
    width: 75%;
    margin: 0 0 0 5px;
}

.ppi-upload-parameters table tbody td,
.ppi-upload-parameters table tbody th {
    padding: 0.15em 0.5em;
    font-size: 15px;
    /*0.95em;*/
}

.ppi-upload-parameters table tbody tr td:nth-child(2) {
    text-align: right;
}

.ppi-upload-parameters table tbody tr td:nth-child(1) {
    font-weight: 700;
}

.ppi-upload-form {
    text-align: center;
    margin-bottom: 8px;
    display: inline-block;
    width: 100%;
    background: var(--main-color-peleman);
    /* default, but the actual color depends on the url - see js/upload-content.js */
    border-radius: 6px;
}

.ppi-add-to-cart-button {
    text-transform: none !important;
    font-weight: 700 !important;
    display: flex !important;
    align-items: center;
}

.upload-disabled {
    border: 1px darkgrey solid !important;
    color: darkgrey !important;
    cursor: not-allowed !important;
}

.upload-disabled:active {
    pointer-events: none;
}

.ppi-upload-form .upload-label {
    color: rgb(105, 105, 105);
    cursor: pointer;
    user-select: none;
    padding: 5px;
    margin-bottom: 0;
    display: block;
}

#file-upload-validation {
    margin-bottom: 8px;
}

.ppi-disabled {
    cursor: not-allowed !important;
    opacity: 0.5 !important;
}

.ppi-disabled:active {
    pointer-events: none;
}

.ppi-response-error {
    color: red;
}

#ppi-loading {
    margin-right: 10px;
    opacity: 1;
    color: white;
    animation: rotate-with-color 1.5s linear infinite;
}

.ppi-hidden {
    display: none !important;
}

@keyframes rotate-with-color {
    25% {
        color: rgb(24, 53, 94);
        transform: rotate(90deg);
    }

    50% {
        color: rgb(24, 53, 94);
        transform: rotate(180deg);
    }

    75% {
        color: rgb(24, 53, 94);
        transform: rotate(270deg);
    }

    100% {
        color: white;
        transform: rotate(360deg);
    }
}

@keyframes rotate {
    to {
        transform: rotate(360deg);
    }
}

.remove-margin {
    margin-bottom: 0 !important;
}

/* style override*/
.individual-price,
.add-to-cart-price {
    font-size: 20px;
    display: block;
}

.individual-price .price-amount,
.add-to-cart-price .price-amount {
    color: #3f3f3f;
    font-weight: bold;
}

.individual-price span.woocommerce-price-suffix,
.add-to-cart-price span.woocommerce-price-suffix {
    color: #757575 !important;
}

.bundle-suffix {
    font-size: 80% !important;
}

/* custom button class for editing a project from the cart */
.pwp_editor_button {
    width: 40%;
    background-color: #000000 !important;
    border-radius: 3px !important;
    color: white !important;
    padding: 4px;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    transition-duration: .1s;
}

.pwp_editor_button:hover {
    background-color: rgb(110, 110, 110) !important;
}

.pwp_editor_button:active {
    background-color: rgb(255, 255, 255) !important;
    border: #000000 !important;
    color: rgb(21, 21, 21) !important;
}

